--- a/templates/build.html
+++ b/templates/build.html
@@ -7,11 +7,11 @@
 
   <div class="d-flex mb-2">
     <div class="font-weight-bold pr-2" style="min-width: 120px;"><strong>Build:</strong></div>
-    <div>{{ pkgstatus.linkbuild(build, servers) }}</div>
+    <div>{{ pkgstatus.linkbuild(build) }}</div>
   </div>
   <div class="d-flex mb-2">
     <div class="font-weight-bold pr-2" style="min-width: 120px;"><strong>Server:</strong></div>
-    <div>{{ pkgstatus.linkserver(build, servers) }}</div>
+    <div>{{ pkgstatus.linkserver(build) }}</div>
   </div>
   <div class="d-flex mb-2">
     <div class="font-weight-bold pr-2" style="min-width: 120px;"><strong>Status:</strong></div>
@@ -19,7 +19,7 @@
   </div>
   <div class="d-flex mb-2">
     <div class="font-weight-bold pr-2" style="min-width: 120px;"><strong>Jail:</strong></div>
-    <div>{{ pkgstatus.linkjail(build, servers) }}</div>
+    <div>{{ pkgstatus.linkjail(build) }}</div>
   </div>
   <div class="d-flex mb-2">
     <div class="font-weight-bold pr-2" style="min-width: 120px;"><strong>Set:</strong></div>
@@ -110,7 +110,7 @@
             {% set reason=ports[stat][origin].errortype %}
             {%- endif %}
             <td data-order="{{ reason }}">
-              {{ pkgstatus.linklog(build, servers, reason, ports.pkgnames[origin]) }}
+              {{ pkgstatus.linklog(build, reason, ports.pkgnames[origin]) }}
             </td>
           {%- endif %}
         </tr>
