--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.1.7/datatables.min.js"></script>
+    {{JSGlue.include()}}
     <script src="{{ url_for('static', filename='pkgstatus.js') }}"></script>
     <script src="{{ url_for('servers_js') }}" type="text/javascript"></script>
 
