--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css" rel="stylesheet">
     <link href="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.1.7/datatables.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="{{ url_for('static', filename='pkgstatus.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='pkgstatus.css', v='20241108') }}">
 
     {% block styles %}{% endblock %}
 </head>
@@ -29,7 +29,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.7.0/dt-2.1.7/datatables.min.js"></script>
     {{JSGlue.include()}}
-    <script src="{{ url_for('static', filename='pkgstatus.js') }}"></script>
+    <script src="{{ url_for('static', filename='pkgstatus.js', v='20241108') }}"></script>
 
     <script>
       var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
